--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "mcp[cli]>=1.5.0",
     "openai>=1.68.2",
     "openai-agents>=0.0.15",
+    "outlines>=1.2.9",
     "playwright>=1.51.0",
     "plotly>=6.0.1",
     "polygon-api-client>=1.14.5",
